modified model/impl/deck/AbstractDeckImpl: modified method draw() tho fix a problem with the last card of the deck